- logs/shop.txt will show what was sold when
- New format for control/shop.txt! The first line is the shop title.
  The rest of the lines are (tab delimited):
  <item>	<price>	[<quantity>]
- Added 'testshop' command which tells you what your shop would sell
  if you opened it.
- NPC coordinates are now displayed in the "NPC Exists" message.

New config options:
- *_inInventory_name : inventory item name
  *_inInventory_qty  : check for quantity
  These are add-ons for the skill usage, item usage and equipAuto config
  options.
- *_onAction : check for current active AI sequence (eg attack, move...)
- partySkill_target: comma seperated targets
- bindIp : if your host has multiple IP addresses, you can select which
  one to use
- squelchDomains : Sets verbosity of a message to 5
  if it is in that domain, e.g. "conf squelchDomains skill" if you don't
  want your vendbot to be spammed by people using skills in town
- dcOnDisconnect : If kore gets disconnected from the server, it will exit.
- ignoreInvalidLogin : ignore Missing Account Error

Bug fixes:
- "vender" command now properly detects the "end" argument. Bugfix by Fenris.
- Attacks will now properly time out when failed.
- Properly support tabs in avoid.txt
- equipAuto for teleport/skills now works, require ai_equipAuto_skilluse_giveup
  in timeout.txt
- Hopefully fixed bug where typing 'follow a' and then 'follow b' will make
  bot still follow a
- autoTalkCont bugfix by fov.
- Fixed useSelf_skill_smartHeal disabling support for heal lvl1
- Fixed chat messages c/g/p/pm - moved them to ai
- Fixed new ai_skillUse to support temporary skills.
- Fixed 'monster', 'mvp' and 'death' commands to work with new ai_skillUse.
- Fixed storage access when storage is empty.
- Various routing bug fixes (by jsteng).
- Fix typo in code block for packet 010F: rename $ID to $skillID.
- 'talk resp' now works correctly with NPCs that present a list of selections
  without saying anything else.